@@ -980,7 +980,7 @@ static void fghJoystickAddHatElement ( SFG_Joystick *joy, CFDictionaryRef button
    http://msdn.microsoft.com/archive/en-us/dnargame/html/msdn_sidewind3d.asp
  */
 #    if defined(_MSC_VER)
-#        pragma comment (lib, "advapi32.lib")
+#        pragma comment (lib, "advapi32.lib") /* library pragmas are bad */
 #    endif
 
 static int fghJoystickGetOEMProductName ( SFG_Joystick* joy, char *buf, int buf_sz )
